# song-wheater-api

./: .test.env  Dockerfile  README.md  app.py  conftest.py  pyproject.toml  pytest.ini  run.py
application/music/controllers/: v1.py
application/music/presenters/: music_by_city_weather_presenter.py
application/music/validators/: search_music_validator.py
application/weather/: __init__.py
application/weather/controllers/: v1.py
configs/: config.py
domain/entities/: music.py  weather.py
domain/enums/: music_genre_type_enum.py  weather_unit_enum.py
domain/interfaces/: music_api_client.py  weather_api_client.py
domain/services/: get_music_by_city_weather_service.py  get_music_by_city_weather_service_test.py
domain/shared/errors/: base_error.py  forbidden_error.py  not_found_error.py  to_many_requests_error.py  unauthorized_error.py  unexpected_client_error.py
extensions/: cache_extension.py  flask_config_extension.py  log_extension.py  routes_extension.py
infra/music_client/spotify_client/: spotify_client_api.py
infra/weather_client/open_weather_api/: open_weather_api_client.py  open_weather_api_client_test.py
tests/integration/music/: search_music_test.py
