[tool.poetry]
name = "song-wheater-api"
version = "0.0.1"
description = "API to search musics by citys and temperature"
authors = ["Gustavo Alex Torres <gustavoalextorres@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
marshmallow = "^3.21.3"
flask = "^3.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
